# just_test

./: .gitignore  CMakeLists.txt  FSMv1.1.graphml  README.md  custom_partition.csv  hardware plan.graphml  partitions.csv  platformio.ini  remotewell planning.graphml  sdkconfig  sdkconfig.ci
data/: deviceIdentifiers.json
include/: battery_control.h  custom_ble.h  firebase_mqtt.h  freertos_handler.h  i2s_play.h  led_strip.h  main.h  mqtt_call_back.h  sleep_manager.h  spiffs_system.h  system_gpio.h  touch_pad_custom.h  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  system_gpio.c
main/libraries/headers/: hlw8032_bts.h  nvs_platform.h  wifi_platform.h
main/libraries/src/: event_handler.c  hlw8032_bts.c  nvs_platform.c  wifi_app.c  wifi_init.c  wifi_platform.c  wifi_sta.c
main/tasks/: history_events.c  indications.c  manage_system.c
main/tasks/hardware/: fram.c  hlw8032.c  hw_monitor.c  mode_button.c  nvs_storage.c  pcf.c  phase_sensing.c  system_spiffs.c
main/tasks/network/hawkbit/: Hawkbit.c  HawkbitHttp.c  HawkbitJson.c  esp_https_ota.c
main/tasks/network/hotspot/: data_store_nvs.c  http_server.c  scan.c
main/tasks/network/parse/: dns_ping.c  http_client.c  live_query_events.c  parse.c  parse_event_controller.c  parse_packet_maker.c  parse_websocket.c  schedule_estimate.c  system_time.c  wifi_manager.c
src/: battery_control.cpp  config.h  custom_ble.cpp  esp32-mqtt.h  firebase_mqtt.cpp  i2s_play.cpp  led_strip.cpp  main.cpp  mqtt_call_back.cpp  psuedoCode.txt  sleep_manager.cpp  spiffs_system.cpp  touch_pad_custom.cpp  wifi_manager.cpp
(+34 files in other folders)
